# Bliss

./: .gitignore  CMakeLists.txt  CMakeLists.txt.n  README.md  build.sh  configure  demo
.github/: FUNDING.yml
.github/workflows/: cmake.yml
bliss/: CMakeLists.txt
bliss/engine/core/: CMakeLists.txt
bliss/engine/core/containers/: delegate.h
bliss/engine/core/engine/: module.h
bliss/engine/core/src/core/: core.h
bliss/engine/core/src/core/engine/: engine.cpp  engine.h
bliss/engine/graphics/: CMakeLists.txt  graphics.h
bliss/engine/graphics/components/: camera.cpp  object.cpp  object.h
bliss/engine/graphics/data/: mesh.cpp  shader.cpp  texture.cpp
bliss/engine/graphics/window/: window.cpp  window.h
cmake/: NENGConfig.cmake.in  configure_application.cmake  configure_module.cmake  copy_module_output.cmake  find_sources.cmake  parse_submodules.cmake
include/bliss/engine/core/: core.h
include/bliss/engine/graphics/: bliss_math.h  graphics.h
include/bliss/engine/graphics/data/: data.h  mesh.h  shader.h  texture.h
res/: basicShader.fs
samples/demo/: CMakeLists.txt  main.cpp
scripts/: requirements.sh
src/: CMakeLists.txt
src/Bliss/: CMakeLists.txt
src/Bliss/include/: Bliss.h  CMakeLists.txt  bliss_math.h  defines.h  graphics.h  input.h  logger.h  networking.h  program.h
src/Bliss/include/assets/: CMakeLists.txt  asset.h  image.h  mesh.h  model.h  shader.h  texture.h
src/Bliss/include/audio/: CMakeLists.txt
src/Bliss/include/engine/: CMakeLists.txt  asset.h  engine.h  manager.h  object.h  scene.h  util.h
src/Bliss/include/engine/core/: CMakeLists.txt  debugTimer.h  error.h  util.h
src/Bliss/include/engine/objects/: CMakeLists.txt  mesh.h  obj_loader.h  object.h
src/Bliss/include/engine/ui/: CMakeLists.txt
src/Bliss/include/engine/world/: CMakeLists.txt  camera.h  transform.h
src/Bliss/include/entities/: CMakeLists.txt  VAO.h  VBO.h  camera.h  mesh.h  object.h  transform.h
src/Bliss/include/graphics/: CMakeLists.txt  color.h  graphics.h  renderer.h  shader.h  texture.h  window.h
src/Bliss/include/input/: CMakeLists.txt  input.h
src/Bliss/include/math/: math.h  matrix.h
src/Bliss/include/networking/: CMakeLists.txt  networking.h  packet.h
src/Bliss/include/renderer/: CMakeLists.txt  sky.h  skybox.h  window.h
src/Bliss/include/system/: CMakeLists.txt
src/Bliss/include/system/console/: CMakeLists.txt  logger.h
src/Bliss/src/: CMakeLists.txt  bliss_math.cpp  graphics.cpp  input.cpp  logger.cpp
src/Bliss/src/assets/: CMakeLists.txt  mesh.cpp  model.cpp  obj_loader.cpp  shader.cpp  texture.cpp
src/Bliss/src/audio/: CMakeLists.txt
src/Bliss/src/common/: stb_image.c.ignore
src/Bliss/src/common/imgui/: imgui.cpp  imgui_demo.cpp.ignore  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/Bliss/src/engine/: CMakeLists.txt  asset.cpp  object.cpp
src/Bliss/src/engine/objects/: CMakeLists.txt  mesh.cpp  obj_loader.cpp
src/Bliss/src/engine/ui/: CMakeLists.txt
src/Bliss/src/engine/world/: CMakeLists.txt  camera.cpp
src/Bliss/src/entities/: CMakeLists.txt  EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  mesh.cpp  object.cpp
src/Bliss/src/graphics/: color.cpp  graphics.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
src/Bliss/src/math/: math.cpp  matrix.cpp
src/Bliss/src/networking/: CMakeLists.txt
src/Bliss/src/renderer/: CMakeLists.txt  sky.cpp  skybox.cpp  window.cpp
src/Bliss/src/system/: CMakeLists.txt
src/NENG/: CMakeLists.txt
src/NENG/include/: CMakeLists.txt  NENG.h  program.h
src/NENG/include/drivers/: CMakeLists.txt
src/NENG/include/drivers/audio/: CMakeLists.txt
src/NENG/include/drivers/graphics/: CMakeLists.txt
src/NENG/include/graphics/: CMakeLists.txt  renderer.h  window.h
src/NENG/include/graphics/ui/: CMakeLists.txt
src/NENG/include/input/: input.h
src/NENG/include/math/: CMakeLists.txt  math.h
src/NENG/include/system/: CMakeLists.txt
src/NENG/include/system/data/: CMakeLists.txt
src/NENG/include/system/data/compression/: CMakeLists.txt  hoffman.h
src/NENG/include/system/files/: CMakeLists.txt
src/NENG/src/: CMakeLists.txt
src/NENG/src/drivers/: CMakeLists.txt
src/NENG/src/drivers/audio/: CMakeLists.txt
src/NENG/src/drivers/graphics/: CMakeLists.txt
src/NENG/src/graphics/: CMakeLists.txt  renderer.cpp  window.cpp
src/NENG/src/graphics/ui/: CMakeLists.txt
src/NENG/src/input/: CMakeLists.txt  input.cpp
src/NENG/src/math/: CMakeLists.txt
src/NENG/src/system/: CMakeLists.txt
src/NENG/src/system/console/: CMakeLists.txt  logger.cpp
src/NENG/src/system/data/: CMakeLists.txt
src/NENG/src/system/data/compression/: CMakeLists.txt
src/NENG/src/system/files/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp
